umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_openbabel_culgi_03.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 52
bond_count: 56
sum_formula: C20H28NO3+1
graph6: "shEGGCA?G?`A?C??_?G?@??C?AG??O??C??`??_OC??A???G???_???G?????G???@????@????A????@?????O????C?????O?????_????@??????_?????O?????A??????G??????_??????_??????_??????G??????A??????????????????????@????????_??????@???@_???????@"
