umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_openbabel_culgi_10.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 39
bond_count: 41
sum_formula: C16H14F3N3O2S
graph6: fhCIGC@?G@?@?@?@??G?@??C??G?AG?OC_?????G???_??@???A???AO???C????_????O????O????A????@??????G?????_????@?????@??????C?????A???
