umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_openbabel_perception16.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 15
bond_count: 16
sum_formula: C15
graph6: "N?__C`?GGC?GPACC?A_"
